This fixes #1609 by add a z-index to the experiment setttings dialog to position it higher than scrollable tables, but below the request dialog.

--- a/www/pagestyle2.css
+++ b/www/pagestyle2.css
@@ -2508,7 +2508,7 @@ th.header {
 .scrollableTable th,
 .scrollableTable td {
     /* scroll-snap-align: start; */
-    
+
     min-width: 4.5rem;
     position: relative;
     z-index: 10;
@@ -3751,6 +3751,7 @@ div.bar {
     border-radius: 3px;
     font-size: .9em;
     box-shadow: 0px 6.4px 14.4px rgb(0 0 0 / 13%), 0px 1.2px 3.6px rgb(0 0 0 / 11%);
+    z-index: 2000;
 }
 #experimentSettings.inactive {
     display: none;
